welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:17: error: value PINk is not a member of object java.awt.Color
	flower(Color.PINk);
                     ^