welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
	flower(Color.RED);
	avance();avance();avance();avance();
	flower(Color.CYAN);
	recule();recule();
	droite();
	avance();avance();
	gauche();
	flower(Color.ORANGE);
	avance();avance();
	droite();
	avance();avance();
	gauche();
	flower(Color.GREEN);
	recule();recule();recule();recule();
	flower(Color.PINk);
	
}


def flower(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	avance();avance();
	leveBrosse();
	gauche();
	avance();
	gauche();
	avance();
	gauche();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(Color.YELLOW);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	droite();
	avance();
	droite();
	
	
	
	
}
